# rustsynth

./: Cargo.toml
examples/: main.rs
src/: constants.rs  host.rs  lib.rs  midi.rs  modules.rs  output.rs
