[package]
name = "rustsynth"
version = "0.1.0"
authors = ["reidbhuntley <reidbhuntley@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
midir = "0.7.0"
midly = "0.5.1"
arr_macro = "0.1.3"
seahash = "4.0.1"
